--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.5",
+    "@nestjs/websockets": "^10.3.5",
     "@prisma/client": "^5.11.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
